test/extern/ferguson/extern-record-proc.good
extern-record-proc.chpl:1: error: extern name expression must be param
