test/extern/ferguson/extern-record-proc.chpl
extern record proc f();
f();
